[package]
name = "OSU-RPMH"
version = "0.1.0"
edition = "2021"

# features are a way in Rust to conditionally compile code
# todo: remove these features once all members of the team have gotten the desktop version of the "hello world" code running on their machines
[features]
default = ["desktop"] # Default to desktop for easy testing
desktop = [] # No dependencies needed
pico = [
    "dep:rp-pico",
    "dep:cortex-m-rt",
    "dep:panic-halt",
] # Only enable embedded deps when needed

# todo: Remove optional flags once all members of the team have gotten the desktop version of the "hello world" code running on their machines
[dependencies]
rp-pico = { version = "0.9.0", optional = true }
cortex-m-rt = { version = "0.7.5", optional = true }
panic-halt = { version = "1.0.0", optional = true }
