[package]
name = "OSU-RPMH"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
rp-pico = "0.9"
panic-halt = "1.0.0"
dht20 = "0.1.0"

# Added to remove the "can't find crate for test" error at the top of src/main.rs when running in vscode
[lib]
test = false
